{{$NEXT}}

0.02      2011-02-15 20:56:33 America/Denver
          [Enchantments]
          - Auto save and simplified button choices as a result
          - more rows to fallback to when vertical autoresize fails

          [Remedies]
          - Support multiple cpan shortcuts within one document

0.01      2011-02-15 00:36:58 America/Denver
          [Remedies]
          - Exclude Fixture from require modules since it's in the dist.
          
0.001     2011-02-15 00:09:43 America/Denver
          Initial Release